# pharos

./: .env.example  .gitignore  .vercelignore  CONTEXT.md  Caddyfile  README.md  compose.yml  package.json  pnpm-lock.yaml
agent/: .dockerignore  Dockerfile  Makefile  pyproject.toml  ruff.toml
agent/agent/: config.py  loop.py  main.py  memory.py
agent/agent/api/: server.py
agent/agent/backtest/: cli.py  engine.py  from_store.py  metrics.py  models.py  policy.py  simulator.py  state.py
agent/agent/bybit_oracle/: __init__.py  abi.py  balance_updater.py  bybit_client.py  (+15 more)
agent/scripts/: cycle_now.py  decide_now.py  probe_alpha.py  probe_alpha_signature.py  probe_endpoints.py  probe_hold_to_earn.py  probe_lm_filter.py  probe_signed.py
agent/tests/: conftest.py  test_analyze.py  test_apr_history_cache.py  test_backtest.py  test_backtest_from_store.py  test_balance_updater.py  test_bybit_client.py  test_bybit_gather.py  test_bybit_oracle_state.py  test_carry_executor.py  test_chain_writer.py  test_cost_report.py  test_decide.py  test_earn_quality.py  test_execute.py  test_gather.py  test_hedge.py  test_ipfs.py  test_lm_redeem_cooldown.py  test_loop.py  test_min_hold.py  test_on_chain.py  test_onchain_anchor_queue.py  test_onchain_writer.py  test_orchestrator.py  test_product_picker.py  test_promo_whitelist.py  test_prompt.py  test_reason.py  test_redeem_intent.py  test_redeem_swap.py  test_reflect.py  test_reputation.py  test_risk_context.py  test_safety.py  test_snapshot.py  test_store_api.py  test_store_backfill.py  test_store_schema.py  test_store_writer.py  (+6 more)
(+217 files in other folders)
