[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "allora-sdk>=1.0.6",
    "anthropic>=0.102.0",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "click>=8.3.3",
    "cryptography>=43.0.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "uvicorn>=0.47.0",
    "web3>=7.16.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
    "testcontainers[postgres]>=4.14.2",
]
